@@ -1,43 +1,24 @@
-#!/bin/sh
+#! /usr/bin/python -u
 #
-# Copyright 2009 Canonical Ltd.  This software is licensed under the
+# Copyright 2009-2017 Canonical Ltd.  This software is licensed under the
 # GNU Affero General Public License version 3 (see the file LICENSE).
 
-# Buildd Slave tool to unpack a chroot tarball
+"""Unpack a chroot tarball."""
 
-# Expects build id as arg 1, makes build-id to contain the build
-# Expects bzip2 compressed tarball as arg 2
+from __future__ import print_function
 
-# Needs TAR to be set to a gnu tar instance, that needs bzip2
-# Needs SUDO to be set to a sudo instance for passwordless access
-# BUNZIP2 must un-bzip2
-# FILE must implement the -b and -i arguments (so a Debianish file)
+__metaclass__ = type
 
-export PATH=/usr/bin:/bin:/usr/sbin:/sbin:${PATH}
+import sys
 
-TAR=tar
-SUDO=sudo
-BUNZIP2=bunzip2
-FILE=file
+from lpbuildd.target.create import Create
+from lpbuildd.target.operation import configure_logging
 
-BUILDID="$1"
-TARBALL="$2"
 
-set -e
+def main():
+    configure_logging()
+    return Create().run()
 
-exec 2>&1
 
-MIMETYPE=$($FILE -bi "$TARBALL")
-
-if [ x"$MIMETYPE" = "xapplication/x-bzip2" ]; then
-  echo "Uncompressing the tarball..."
-  $BUNZIP2 -c < "$TARBALL" > "$TARBALL".tmp
-  mv "$TARBALL".tmp "$TARBALL"
-  exec $0 "$@"
-fi
-
-cd $HOME
-cd "build-$BUILDID"
-
-echo "Unpacking chroot for build $BUILDID"
-$SUDO $TAR -xf "$TARBALL"
+if __name__ == "__main__":
+    sys.exit(main())
