@@ -6,6 +6,7 @@ from __future__ import print_function
 __metaclass__ = type
 
 import os.path
+import subprocess
 
 
 class BackendException(Exception):
@@ -30,6 +31,13 @@ class Backend:
             raise KeyError("Unknown backend: %s" % name)
         return backend_factory(build_id, series=series, arch=arch)
 
+    def create(self, tarball_path):
+        """Create the backend based on a chroot tarball.
+
+        This puts the backend into a state where it is ready to be started.
+        """
+        raise NotImplementedError
+
     def run(self, args, env=None, input_text=None, **kwargs):
         """Run a command in the target environment.
 
@@ -53,3 +61,7 @@ class Backend:
             environment's root.
         """
         raise NotImplementedError
+
+    def remove(self):
+        """Remove the backend."""
+        subprocess.check_call(["sudo", "rm", "-rf", self.build_path])
