@@ -106,6 +106,7 @@ class TestDebianBuildManagerIteration(TestCase):
         self.assertEqual(DebianBuildState.UNPACK, self.getState())
         self.assertEqual(
             (['sharepath/slavebin/unpack-chroot', 'unpack-chroot',
+              '--backend=chroot', '--series=xenial', '--arch=amd64',
               self.buildid,
               os.path.join(self.buildmanager._cachepath, 'chroot.tar.gz')],
              None),
@@ -177,7 +178,9 @@ class TestDebianBuildManagerIteration(TestCase):
         self.buildmanager.iterate(0)
         self.assertEqual(DebianBuildState.CLEANUP, self.getState())
         self.assertEqual(
-            (['sharepath/slavebin/remove-build', 'remove-build', self.buildid],
+            (['sharepath/slavebin/remove-build', 'remove-build',
+              '--backend=chroot', '--series=xenial', '--arch=amd64',
+              self.buildid],
              None),
             self.buildmanager.commands[-1])
         self.assertEqual(
@@ -208,6 +211,7 @@ class TestDebianBuildManagerIteration(TestCase):
         self.assertEqual(DebianBuildState.UNPACK, self.getState())
         self.assertEqual(
             (['sharepath/slavebin/unpack-chroot', 'unpack-chroot',
+              '--backend=chroot', '--series=xenial', '--arch=amd64',
               self.buildid,
               os.path.join(self.buildmanager._cachepath, 'chroot.tar.gz')],
              None),
@@ -290,7 +294,9 @@ class TestDebianBuildManagerIteration(TestCase):
         self.buildmanager.iterate(0)
         self.assertEqual(DebianBuildState.CLEANUP, self.getState())
         self.assertEqual(
-            (['sharepath/slavebin/remove-build', 'remove-build', self.buildid],
+            (['sharepath/slavebin/remove-build', 'remove-build',
+              '--backend=chroot', '--series=xenial', '--arch=amd64',
+              self.buildid],
              None),
             self.buildmanager.commands[-1])
         self.assertEqual(
