@@ -15,6 +15,8 @@ launchpad-buildd (148) UNRELEASED; urgency=medium
   * Rewrite override-sources-list in Python, allowing it to have unit tests.
   * Rewrite add-trusted-keys in Python, allowing it to have unit tests.
   * Configure sbuild to use schroot sessions rather than sudo.
+  * Rewrite unpack-chroot and remove-build in Python, allowing them to have
+    unit tests.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 25 Jul 2017 23:07:58 +0100
 
